Edit Progress Report + BAB 3.2

--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -534,7 +534,7 @@ SIA Models merupakan kelas-kelas dalam bahasa Java yang merepresentasikan Sistem
 
 \begin{table}
 	\centering
-    \begin{tabular}{{|c|l|}}
+    \begin{tabular}{|c|l|}
 		\hline
 		Kelas & \textit{Implements}\\
 		\hline
@@ -595,6 +595,7 @@ SIA Models merupakan kelas-kelas dalam bahasa Java yang merepresentasikan Sistem
     MKU010  & -                          \\
     MKU011  & -                          \\
     MKU012  & -                          \\
+		\hline
     \end{tabular}
 		\caption{Tabel Rincian Kelas pada \textit{Package} \texttt{id.ac.unpar.siamodels.matakuliah}}
 	\label{tab:2_kelas_matakuliah}
