--- a/doc/ProgressReport/document.tex
+++ b/doc/ProgressReport/document.tex
@@ -74,7 +74,7 @@ Detail bagian pekerjaan skripsi sesuai dengan rencana kerja/laporan perkembangan
 		\item Melakukan wawancara kepada mahasiswa Program Studi Teknik Informatika untuk mendapatkan informasi
 penggunaan Portal Akademik Mahasiswa.\\
 		{\bf status :} Ada sejak rencana kerja skripsi.\\
-		{\bf hasil :} Wawancara sudah dilakukan kepada 18 mahasiswa Program Studi Teknik Informatika. Bukti-bukti wawancara dapat dilihat pada %\url{https://github.com/herfanheryandi/Skripsi/tree/master/draft/Interview\%20.amr}.
+		{\bf hasil :} Wawancara sudah dilakukan kepada 18 mahasiswa Program Studi Teknik Informatika. Bukti-bukti wawancara dapat dilihat pada \url{https://github.com/herfanheryandi/Skripsi/tree/master/draft/Interview}.
 
 		\item Menganalisis Portal Akademik Mahasiswa.\\
 		{\bf status :} Ada sejak rencana kerja skripsi.\\
